Add Llama3.java to Gradle build with JDK 21/25 tasks and documentation
Build configuration (new build.gradle.kts):
- Added to Gradle multi-project build
- Compiles single-file Llama3.java
- Separate tasks for JDK 21 and JDK 25 comparison
- Configures Vector API incubator module

Tasks created:
- ./gradlew :demos:llama3-java:run (JDK 25, default)
- ./gradlew :demos:llama3-java:runJDK25 (~13 tok/s - fast)
- ./gradlew :demos:llama3-java:runJDK21 (~0.3 tok/s - 40x slower!)
- ./gradlew :demos:llama3-java:runSmoke (delegates to runJDK25)

Why separate tasks:
- Demonstrates dramatic JDK version impact
- Same code, 40x performance difference
- Educational value - shows Vector API improvements

New documentation:
- README.md (usage guide)
  - Quick start
  - Performance comparison table
  - When to use JDK 21 vs 25
  - Task descriptions

- Findings.md (technical deep dive)
  - The 40x performance mystery explained
  - Vector API evolution (JDK 16 → 25)
  - Assembly code comparison (JDK 21 vs 25)
  - Pure Java LLM architecture
  - When to use Llama3.java vs native solutions
  - Single-file philosophy
  - Lessons learned

GitHub Action (.github/workflows/llama3-java.yml):
- Two jobs: JDK 25 (fast) and JDK 21 (slow)
- Downloads Llama 3.2 1B model
- Validates both work but with different performance
- Shows Vector API improvements in CI

Changes to settings.gradle.kts:
- Added :demos:llama3-java to project

Script status:
- scripts/run-llama3.sh kept for now (can be removed if redundant)
- Gradle tasks are simpler and more discoverable

Benefits:
- Integrated into Gradle build
- CI validation
- Side-by-side JDK comparison
- Educational: demonstrates Vector API progress

Co-Authored-By: Claude Sonnet 4.5 (1M context) <noreply@anthropic.com>